k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vetclinic
  labels:
    name: vetclinic
    environment: production
